removed try/catch block in service